# bitcoin

./: .cirrus.yml  CMakeLists.txt  configure.ac  test_runner.py
.github/workflows/: cmake.yml
THREADS/: CMakeLists.txt  test-threads.cpp  util-threads.cpp  util-threads.h
build-aux/m4/: bitcoin_qt.m4
ci/test/: 00_setup_env_i686_multiprocess.sh  00_setup_env_native_tidy.sh  00_setup_env_native_valgrind.sh  06_script_b.sh  wrap-wine.sh
contrib/gitian-descriptors/: gitian-linux.yml
contrib/guix/: manifest.scm
contrib/guix/libexec/: prelude.bash
contrib/guix/patches/: gcc-8-win-std-filesystem.patch  gcc-force-inhibitlibc.patch
depends/patches/qt/: cmake_pkgconfig.patch  root_CMakeLists.txt
doc/: build-unix.md
src/: Makefile.am  Makefile.test.include  chain.h  dbwrapper.cpp  dbwrapper.h  fs.h  init.cpp  logging.h
src/common/: init.cpp  run_command.cpp
src/kernel/: chain.cpp  chainparams.cpp  chainparams.h  coinstats.cpp  context.cpp  mempool_persist.cpp
src/node/: chainstate.cpp  chainstatemanager_args.cpp  minisketchwrapper.cpp
src/qt/: guiutil.cpp  walletmodel.cpp
src/rpc/: request.cpp
src/test/: fs_tests.cpp  settings_tests.cpp  system_tests.cpp  util_tests.cpp
src/util/: settings.cpp  sock.h  subprocess.hpp  system.cpp
src/wallet/: bdb.cpp  db.cpp  dump.cpp  rpcdump.cpp  rpcwallet.cpp  salvage.cpp  scriptpubkeyman.h  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: db_tests.cpp  init_test_fixture.cpp
src/zmq/: zmqpublishnotifier.cpp
test/functional/: wallet_multiwallet.py
